--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     ],
     "require": {
         "php": ">=7.1",
-        "guzzlehttp/guzzle": "^6.0"
+        "guzzlehttp/guzzle": ">=6.0"
     },
     "autoload": {
         "psr-4": {
